--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "fix": "ng lint --fix",
+    "lint": "ng lint",
     "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
@@ -19,6 +21,7 @@
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
+    "@angular/material": "^12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
@@ -26,8 +29,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
+    "@angular-eslint/builder": "^12.2.0",
+    "@angular-eslint/eslint-plugin-template": "^12.2.0",
+    "@angular-eslint/template-parser": "^12.2.0",
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.4.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "gts": "^3.1.0",
     "typescript": "~4.3.2"
   }
 }
