Add Chrome Extension scaffolding
Update buiild process to generate separate on-page and in-DevTools files that get bundled together

Bug: 193062584
Bug: 193436790
Bug: 193436805
Change-Id: I938a6f53f0e2645819446910af0ca38905ee127e

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,14 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/bootstrap.html",
+              "src/manifest.json",
+              {
+                "input": "./dist/client",
+                "glob": "*.js",
+                "output": "."
+              }
             ],
             "styles": [],
             "scripts": []
