--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "dayjs": "^1.10.5",
+    "diff": "^5.0.0",
+    "json-format": "^1.0.1",
+    "rxjs": "^7.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
