--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "diff": "^5.0.0",
     "json-format": "^1.0.1",
     "rxjs": "^7.2.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "~12.1.1",
     "@types/chrome": "0.0.145",
     "@types/node": "^12.20.15",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
