Add ability to read and process local directory to get suggestions
Bug: 193062584
Bug: 193436805
Bug: 193436790
Bug: 193461337
Bug: 193461341
Change-Id: I0475dc661de7f62305b6aa5dcb6e837397ccb7d3

--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,11 @@
               "src/bootstrap.html",
               "src/manifest.json",
               {
+                "input": "./node_modules/js-yaml/dist/",
+                "glob": "js-yaml.min.js",
+                "output": "."
+              },
+              {
                 "input": "./dist/client",
                 "glob": "*.js",
                 "output": "."
