--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,10 @@
                 "output": "."
               }
             ],
-            "styles": [],
+            "styles": [
+              "src/theme.css",
+              "src/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
