Add unit test infrastructure
Move extension scripts to a webpage directory
Use Parcel to compile webpage scripts
Move processSdk to separate module
Add Ava for unit tests
Add example/sdk directory to test SDK processing
Add usage and dev instructions to README

Bug: 193062584
Bug: 193666522

Change-Id: I97cfef99fbcdb5e1feafd53f96fb623bc1e32eda

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,9 @@
       "rules": {
         "@typescript-eslint/triple-slash-reference": "off",
         "@typescript-eslint/no-explicit-any": "error",
-        "no-constant-condition": "off"
+        "no-constant-condition": "off",
+        "node/no-unpublished-import": "off",
+        "node/no-unpublished-require": "off"
       }
     },
     {
