--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "npm run build:client && npm run build:extension",
-    "build:client": "tsc --project tsconfig.client.json",
+    "build:client": "tsc --project tsconfig.client.json && parcel build dist/client/*.js --dist-dir dist/client-bundle",
     "build:extension": "ng build",
     "fix": "ng lint --fix",
     "lint": "ng lint",
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "tsc --project tsconfig.ava.json && ava dist/tests/**/*.test.js",
     "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
@@ -29,6 +31,7 @@
     "@angular/router": "~12.1.1",
     "dayjs": "^1.10.5",
     "diff": "^5.0.0",
+    "js-yaml": "^4.1.0",
     "json-format": "^1.0.1",
     "rxjs": "^7.2.0",
     "uuid": "^8.3.2",
@@ -41,16 +44,21 @@
     "@angular-eslint/template-parser": "^12.2.0",
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
+    "@assistant/actions": "^1.1.0",
     "@types/chrome": "0.0.145",
     "@types/node": "^12.20.15",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "ava": "^3.15.0",
+    "cross-blob": "^2.0.1",
     "eslint": "^7.30.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsdoc": "^35.4.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "googleapis": "^81.0.0",
     "gts": "^3.1.0",
+    "parcel": "^2.0.0-rc.0",
     "typescript": "~4.3.2"
   }
 }
