Add metadata for release
Add 'package' command to generate zip file
Add link to store listing to README
Update version to 1.0.0

Change-Id: I520736aa09e05bc73ffdfa9db828c9461ee50c40

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Interactive Canvas Extension",
-    "description": "Interactive Canvas Extension!",
-    "version": "0.0.0",
+    "name": "Interactive Canvas DevTools",
+    "description": "DevTools for Interactive Canvas",
+    "version": "1.0.0",
     "manifest_version": 3,
     "permissions": ["storage", "activeTab", "scripting"],
     "host_permissions": ["<all_urls>"],
