--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": {
     "name": "Google LLC"
   },
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
@@ -14,6 +14,7 @@
     "build:extension": "ng build",
     "fix": "ng lint --fix",
     "lint": "ng lint",
+    "package": "cd dist/interactive-canvas-extension && zip bundle.zip * && mv bundle.zip ../../",
     "test": "npm run lint && npm run test:unit",
     "test:unit": "tsc --project tsconfig.ava.json && ava dist/tests/**/*.test.js",
     "watch": "ng build --watch --configuration development"
