Update build process to fix loading errors
Accomodate directories of JS files
Address obfuscation key in executing callbacks
Update to patch 1.0.1

Change-Id: I6780d4190fcc5b24afee7e73d7ac3413cc1820ea

--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
               },
               {
                 "input": "./dist/client-bundle",
-                "glob": "*.js",
+                "glob": "**/*.js",
                 "output": "."
               }
             ],
